# sample-app

./: .gitignore  .mise.toml  CHANGELOG.md  Makefile  README.md  SPEC.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml  release-please.yml  release.yml
ai-gateway/: .gitattributes  README.md  package.json  pnpm-lock.yaml  tsconfig.json
ai-gateway/src/: bridge.ts  chat.ts  codexClient.ts  config.ts  devMockTaskApi.ts  mcpTaskServer.ts  protocol.ts  runTurn.ts  server.ts  session.ts  smoke.ts  smokeMcp.ts  smokeWs.ts  taskClient.ts  taskMcpLauncher.ts
ai-gateway/test/: bridge.test.ts  codexClient.test.ts  taskClient.test.ts
api/: pyproject.toml
api/src/stats_api/: __init__.py  handler.py  repository.py
api/tests/: conftest.py  test_handler.py
backend/: pyproject.toml
backend/src/task_api/: __init__.py  handler.py  models.py  repository.py
backend/tests/: conftest.py  test_handler.py
docs/: ai-assist-spec.md  api.md  deployment.md  development.md
frontend/: .env.example  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts  vite-env.d.ts
frontend/src/ai/: ApprovalDialog.tsx  AssistantPanel.tsx  protocol.ts  useAssistant.ts
infra/bootstrap/: README.md  main.tf  outputs.tf  providers.tf  state-backend-outputs.tf  state-backend.tf  variables.tf  versions.tf
infra/environments/local/: main.tf  outputs.tf  providers.tf  variables.tf
infra/environments/prod/: backend.tf  backend.tf.example  main.tf  outputs.tf  (+4 more)
scripts/: deploy-local.sh  local_api_server.py  run-ai-gateway.sh
(+12 files in other folders)
