[project]
name = "stats-api"
version = "0.1.0"
description = "タスク統計 API (AWS Lambda)"
requires-python = ">=3.13"
# boto3 は Lambda ランタイムに同梱のため本番デプロイ対象には含めない。
dependencies = []

[project.optional-dependencies]
dev = [
    "boto3>=1.34",
    "moto>=5.0",
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
