[project]
name = "task-api"
version = "0.1.0"
description = "タスク管理アプリのバックエンド (AWS Lambda)"
requires-python = ">=3.13"
# boto3 は Lambda ランタイムに同梱されているため本番デプロイ対象には含めない。
# ローカル実行・テスト用に dev extras で導入する。
dependencies = []

[project.optional-dependencies]
dev = [
    "boto3>=1.34",
    "moto>=5.0",
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
